# opencascade-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  zbox_case_failure.txt
agent-logs/: 2026-01-29_20-59_log.md  2026-01-30_20-31-vscode-claude-opus-4.5.md  2026-02-01_08-08-vscode-claude-opus-4.5.md  2026-02-02_11-09_log.md  2026-02-02_13-54_log.md  2026-02-02_16-03_log.md  2026-02-02_19-59_vscode-gemini-3-pro-preview.md  2026-02-03_21-22_log.md  2026-02-04_21-30-82590beb-claude-opus-4.5.md  2026-02-05_0e611961_claude_log.md  2026-02-12_00e99ac1_claude_log.md  2026-02-12_09-43_log.md  2026-02-12_18-41_log.md  2026-02-12_20_08-vscode-claude-opus-4.6.md  2026-02-13_07-37-vscode-claude-opus-4.6.md  2026-02-13_09-23-vscode-claude-opus-4.6.md  2026-02-13_11-34-vscode-claude-opus-4.6.md  2026-02-13_11-34_log.md  2026-02-13_13-20-vscode-claude-opus-4.6.md  2026-02-13_20-13-vscode-raptor-mini-preview.md  2026-02-13_52071e8b_claude_log.md  2026-02-13_800b1654_claude_log.md  2026-02-14_08-58_log.md  2026-02-14_11-30-vscode-claude-opus-4.6.md  2026-02-14_12-26_log.md  2026-02-14_13-57-vscode-claude-opus-4.6.md  2026-02-14_15-20_log.md  2026-02-14_18-29_log.md  2026-02-14_19-00-vscode-claude-opus-4.6.md  2026-02-14_20-25-vscode-claude-opus-4.6.md  2026-02-14_20-55_log.md  2026-02-14_21-45-vscode-claude-opus-4.6.md  2026-02-15_07-35_log.md  2026-02-15_17-23_log.md  2026-02-16_10-50-vscode-claude-opus-4.6.md  2026-02-16_11-30_log.md  2026-02-16_13-00-vscode-claude-opus-4.6.md  2026-02-16_13-55-vscode-claude-opus-4.6.md  2026-02-16_14-20-vscode-claude-opus-4.6.md  2026-02-16_15-09-vscode-claude-opus-4.6.md  (+96 more)
crates/opencascade/: Cargo.toml
crates/opencascade-binding-generator/: Cargo.toml  PLAN.md  README.md  STEP_4i_SUMMARY.md  TRANSITION_PLAN.md  UNIFIED_TESTING.md  codegen-flow.dot
crates/opencascade-binding-generator/src/: config.rs  header_deps.rs  lib.rs  main.rs  model.rs  module_graph.rs  parser.rs  resolver.rs  type_mapping.rs
crates/opencascade-binding-generator/src/codegen/: bindings.rs  collections.rs  cpp.rs  mod.rs  rust.rs
crates/opencascade-sys/: Cargo.toml  PORTING.md  bindings.toml  build.rs  headers.txt  headers_original.txt
crates/opencascade-sys-old/: Cargo.toml  MAPPING.md
examples/: Cargo.toml  case_feet.step  keyboard.step
examples/golden/: airfoil.step  bounding-box.step  box-shape.step  cable-bracket.step  chamfer.step  flat-ethernet-bracket.step  gizmo.step  heater-coil.step  high-level-bottle.step  keyboard-case.step  keycap.step  letter-a.step  offset2d.step  pentafoil.step  rounded-chamfer.step  section.step  swept-face-variable.step  swept-face.step  swept-wire-variable.step  (+4 more)
scripts/: compute-skip-stats.py  export_chat_log.py  regenerate-bindings.sh  run-binding-generator-tests.sh
(+122 files in other folders)
