[package]
name = "opencascade-binding-generator"
version = "0.1.0"
edition = "2021"
description = "A tool using libclang to parse OCCT headers and generate CXX bridge code"
license = "MIT"

[lib]
name = "opencascade_binding_generator"
path = "src/lib.rs"

[[bin]]
name = "occt-bindgen"
path = "src/main.rs"

[dependencies]
# C++ parsing via libclang.
# NOTE: The published v2.0.0 has a UB bug in SourceRange::tokenize() that causes
# a crash in debug builds on Rust >= 1.78 (KyleMayes/clang-rs#47, fixed in PR #58).
# The fix has not been released to crates.io. As a workaround, regenerate-bindings.sh
# builds in --release mode (which disables the UB check). If/when v2.0.1 is published,
# remove the --release flag from that script.
clang = { version = "2.0", features = ["clang_3_9"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Case conversion (snake_case, PascalCase, etc.)
heck = "0.5"

# Regular expressions for text processing
regex = "1.10"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }

# TOML config file parsing
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
